--- a/description
+++ b/description
@@ -1,10 +1,14 @@
-Description 
+Description
+
+in this task of sorting boxes in production line , i have used the force sensor resistor sensor to sense the weight of that certain box ( force / pressure ) and by
+that the servo arm will chance its position dependingly . 
+
 
 Materials :- 
 
 Arduino Uno . 
 3 Servo mortors . 
-Force sensitive resistor (FSR) . 
+Force sensitive resistor (FSR) sensor  . 
 Resistance . 
 
 Connection:- 
@@ -15,7 +19,7 @@ Yellow wire to D9 pin
 Brown wire to GND pin 
 Red wire to 5v pin 
 
-Second The  FSR  :- 
+Second The  FSR sensor   :- 
 The positive terminal to 5v pin in Arduino Uno . 
 The negative terminal to terminal 2 in resistance .
 
